--- a/jokic.ipynb
+++ b/jokic.ipynb
@@ -939,8 +939,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "id": "c352d1b8-9a3a-4d83-9b34-a5028c23c71e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.drop(columns=['Team', 'Lg', 'Pos'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "af6511ec-c252-46fa-b447-bc34af7ee7f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['Awards'] = data['Awards'].fillna('No awards')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "d2488591-198f-43f1-a38a-9a007ebd5257",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10 entries, 1 to 10\n",
+      "Data columns (total 28 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   Season  10 non-null     object\n",
+      " 1   Age     10 non-null     object\n",
+      " 2   G       10 non-null     object\n",
+      " 3   GS      10 non-null     object\n",
+      " 4   MP      10 non-null     object\n",
+      " 5   FG      10 non-null     object\n",
+      " 6   FGA     10 non-null     object\n",
+      " 7   FG%     10 non-null     object\n",
+      " 8   3P      10 non-null     object\n",
+      " 9   3PA     10 non-null     object\n",
+      " 10  3P%     10 non-null     object\n",
+      " 11  2P      10 non-null     object\n",
+      " 12  2PA     10 non-null     object\n",
+      " 13  2P%     10 non-null     object\n",
+      " 14  eFG%    10 non-null     object\n",
+      " 15  FT      10 non-null     object\n",
+      " 16  FTA     10 non-null     object\n",
+      " 17  FT%     10 non-null     object\n",
+      " 18  ORB     10 non-null     object\n",
+      " 19  DRB     10 non-null     object\n",
+      " 20  TRB     10 non-null     object\n",
+      " 21  AST     10 non-null     object\n",
+      " 22  STL     10 non-null     object\n",
+      " 23  BLK     10 non-null     object\n",
+      " 24  TOV     10 non-null     object\n",
+      " 25  PF      10 non-null     object\n",
+      " 26  PTS     10 non-null     object\n",
+      " 27  Awards  10 non-null     object\n",
+      "dtypes: object(28)\n",
+      "memory usage: 2.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "86330d71-d686-4b25-9991-ef420037d762",
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1106,7 @@
        "      <td>2.3</td>\n",
        "      <td>2.9</td>\n",
        "      <td>16.7</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>No awards</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1058,7 +1130,7 @@
        "      <td>2.8</td>\n",
        "      <td>2.8</td>\n",
        "      <td>18.5</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>No awards</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1248,8 +1320,8 @@
        "\n",
        "     TRB   AST  STL  BLK  TOV   PF   PTS              Awards  \n",
        "1    7.0   2.4  1.0  0.6  1.3  2.6  10.0               ROY-3  \n",
-       "2    9.8   4.9  0.8  0.8  2.3  2.9  16.7                 NaN  \n",
-       "3   10.7   6.1  1.2  0.8  2.8  2.8  18.5                 NaN  \n",
+       "2    9.8   4.9  0.8  0.8  2.3  2.9  16.7           No awards  \n",
+       "3   10.7   6.1  1.2  0.8  2.8  2.8  18.5           No awards  \n",
        "4   10.8   7.3  1.4  0.7  3.1  2.9  20.1         MVP-4ASNBA1  \n",
        "5    9.7   7.0  1.2  0.6  3.1  3.0  19.9         MVP-9ASNBA2  \n",
        "6   10.8   8.3  1.3  0.7  3.1  2.7  26.4         MVP-1ASNBA1  \n",
@@ -1261,29 +1333,423 @@
        "[10 rows x 28 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.drop(columns=['Team', 'Lg', 'Pos'])"
+    "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "af6511ec-c252-46fa-b447-bc34af7ee7f5",
+   "execution_count": 60,
+   "id": "8ce9904e-eb98-4ef1-9fdf-fca69bd6aaeb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['Awards'] = data['Awards'].fillna('No awards')"
+    "for col in data.columns:\n",
+    "    if col != 'Awards':\n",
+    "        data[col] = pd.to_numeric(data[col], errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "ca58462e-c791-47d5-97e6-6fecea62757c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Season    float64\n",
+       "Age         int64\n",
+       "G           int64\n",
+       "GS          int64\n",
+       "MP        float64\n",
+       "FG        float64\n",
+       "FGA       float64\n",
+       "FG%       float64\n",
+       "3P        float64\n",
+       "3PA       float64\n",
+       "3P%       float64\n",
+       "2P        float64\n",
+       "2PA       float64\n",
+       "2P%       float64\n",
+       "eFG%      float64\n",
+       "FT        float64\n",
+       "FTA       float64\n",
+       "FT%       float64\n",
+       "ORB       float64\n",
+       "DRB       float64\n",
+       "TRB       float64\n",
+       "AST       float64\n",
+       "STL       float64\n",
+       "BLK       float64\n",
+       "TOV       float64\n",
+       "PF        float64\n",
+       "PTS       float64\n",
+       "Awards     object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "bbf1aedb-252a-4916-99c6-a4f12489ad45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['Has award'] = data['Awards'].apply(lambda x: 0 if x == 'No awards' else 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "55ada447-65fd-4c9d-bca1-0d4365006ebd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>G</th>\n",
+       "      <th>GS</th>\n",
+       "      <th>MP</th>\n",
+       "      <th>FG</th>\n",
+       "      <th>FGA</th>\n",
+       "      <th>FG%</th>\n",
+       "      <th>3P</th>\n",
+       "      <th>3PA</th>\n",
+       "      <th>...</th>\n",
+       "      <th>DRB</th>\n",
+       "      <th>TRB</th>\n",
+       "      <th>AST</th>\n",
+       "      <th>STL</th>\n",
+       "      <th>BLK</th>\n",
+       "      <th>TOV</th>\n",
+       "      <th>PF</th>\n",
+       "      <th>PTS</th>\n",
+       "      <th>Awards</th>\n",
+       "      <th>Has award</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20</td>\n",
+       "      <td>80</td>\n",
+       "      <td>55</td>\n",
+       "      <td>21.7</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>0.512</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>ROY-3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21</td>\n",
+       "      <td>73</td>\n",
+       "      <td>59</td>\n",
+       "      <td>27.9</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>11.7</td>\n",
+       "      <td>0.578</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>No awards</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22</td>\n",
+       "      <td>75</td>\n",
+       "      <td>73</td>\n",
+       "      <td>32.6</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>13.5</td>\n",
+       "      <td>0.499</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>10.7</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>No awards</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>31.3</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>15.1</td>\n",
+       "      <td>0.511</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>10.8</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>20.1</td>\n",
+       "      <td>MVP-4ASNBA1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24</td>\n",
+       "      <td>73</td>\n",
+       "      <td>73</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>0.528</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>9.7</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>19.9</td>\n",
+       "      <td>MVP-9ASNBA2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25</td>\n",
+       "      <td>72</td>\n",
+       "      <td>72</td>\n",
+       "      <td>34.6</td>\n",
+       "      <td>10.2</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0.566</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>10.8</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>MVP-1ASNBA1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>26</td>\n",
+       "      <td>74</td>\n",
+       "      <td>74</td>\n",
+       "      <td>33.5</td>\n",
+       "      <td>10.3</td>\n",
+       "      <td>17.7</td>\n",
+       "      <td>0.583</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>27.1</td>\n",
+       "      <td>MVP-1ASNBA1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>27</td>\n",
+       "      <td>69</td>\n",
+       "      <td>69</td>\n",
+       "      <td>33.7</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>0.632</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>11.8</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>24.5</td>\n",
+       "      <td>MVP-2CPOY-13ASNBA2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>28</td>\n",
+       "      <td>79</td>\n",
+       "      <td>79</td>\n",
+       "      <td>34.6</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>0.583</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>12.4</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>MVP-1CPOY-4ASNBA1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29</td>\n",
+       "      <td>70</td>\n",
+       "      <td>70</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>19.5</td>\n",
+       "      <td>0.576</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.9</td>\n",
+       "      <td>12.7</td>\n",
+       "      <td>10.2</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>29.6</td>\n",
+       "      <td>MVP-2CPOY-2ASNBA1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Season  Age   G  GS    MP    FG   FGA    FG%   3P  3PA  ...   DRB   TRB  \\\n",
+       "1      NaN   20  80  55  21.7   3.8   7.5  0.512  0.4  1.1  ...   4.7   7.0   \n",
+       "2      NaN   21  73  59  27.9   6.8  11.7  0.578  0.6  1.9  ...   6.9   9.8   \n",
+       "3      NaN   22  75  73  32.6   6.7  13.5  0.499  1.5  3.7  ...   8.1  10.7   \n",
+       "4      NaN   23  80  80  31.3   7.7  15.1  0.511  1.0  3.4  ...   8.0  10.8   \n",
+       "5      NaN   24  73  73  32.0   7.7  14.7  0.528  1.1  3.5  ...   7.5   9.7   \n",
+       "6      NaN   25  72  72  34.6  10.2  18.0  0.566  1.3  3.3  ...   8.0  10.8   \n",
+       "7      NaN   26  74  74  33.5  10.3  17.7  0.583  1.3  3.9  ...  11.0  13.8   \n",
+       "8      NaN   27  69  69  33.7   9.4  14.8  0.632  0.8  2.2  ...   9.4  11.8   \n",
+       "9      NaN   28  79  79  34.6  10.4  17.9  0.583  1.1  2.9  ...   9.5  12.4   \n",
+       "10     NaN   29  70  70  36.7  11.2  19.5  0.576  2.0  4.7  ...   9.9  12.7   \n",
+       "\n",
+       "     AST  STL  BLK  TOV   PF   PTS              Awards  Has award  \n",
+       "1    2.4  1.0  0.6  1.3  2.6  10.0               ROY-3          1  \n",
+       "2    4.9  0.8  0.8  2.3  2.9  16.7           No awards          0  \n",
+       "3    6.1  1.2  0.8  2.8  2.8  18.5           No awards          0  \n",
+       "4    7.3  1.4  0.7  3.1  2.9  20.1         MVP-4ASNBA1          1  \n",
+       "5    7.0  1.2  0.6  3.1  3.0  19.9         MVP-9ASNBA2          1  \n",
+       "6    8.3  1.3  0.7  3.1  2.7  26.4         MVP-1ASNBA1          1  \n",
+       "7    7.9  1.5  0.9  3.8  2.6  27.1         MVP-1ASNBA1          1  \n",
+       "8    9.8  1.3  0.7  3.6  2.5  24.5  MVP-2CPOY-13ASNBA2          1  \n",
+       "9    9.0  1.4  0.9  3.0  2.5  26.4   MVP-1CPOY-4ASNBA1          1  \n",
+       "10  10.2  1.8  0.6  3.3  2.3  29.6   MVP-2CPOY-2ASNBA1          1  \n",
+       "\n",
+       "[10 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2488591-198f-43f1-a38a-9a007ebd5257",
+   "id": "17ea897e-c809-42a8-b281-b775ea4e6ae2",
    "metadata": {},
    "outputs": [],
    "source": []
