--- a/jokic.ipynb
+++ b/jokic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 69,
    "id": "11d43f34-8cf9-4641-b92a-00bc7fc947bf",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
    "id": "fa867203-0936-4ae8-943f-d98e51667129",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 71,
    "id": "354f4fd8-eead-40aa-9b36-4ff9f2e05a7a",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
        "(12, 31)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 72,
    "id": "3961b9f5-3eae-45ec-aa94-35e86a025b4e",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
        "[12 rows x 31 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 73,
    "id": "f1325f9c-b1e7-413d-ba08-ca4feab8bc9a",
    "metadata": {},
    "outputs": [],
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 74,
    "id": "6cfb5f49-895a-4abc-a4b4-465de850feec",
    "metadata": {},
    "outputs": [
@@ -873,7 +873,7 @@
        "[10 rows x 31 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 75,
    "id": "bf449c26-0538-423e-a51e-fa1380b1fdbb",
    "metadata": {},
    "outputs": [
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 76,
    "id": "c352d1b8-9a3a-4d83-9b34-a5028c23c71e",
    "metadata": {},
    "outputs": [],
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 77,
    "id": "af6511ec-c252-46fa-b447-bc34af7ee7f5",
    "metadata": {},
    "outputs": [],
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 78,
    "id": "d2488591-198f-43f1-a38a-9a007ebd5257",
    "metadata": {},
    "outputs": [
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 79,
    "id": "86330d71-d686-4b25-9991-ef420037d762",
    "metadata": {},
    "outputs": [
@@ -1333,7 +1333,7 @@
        "[10 rows x 28 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,26 +1344,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 80,
    "id": "8ce9904e-eb98-4ef1-9fdf-fca69bd6aaeb",
    "metadata": {},
    "outputs": [],
    "source": [
     "for col in data.columns:\n",
-    "    if col != 'Awards':\n",
+    "    if col not in ['Awards', 'Season']:\n",
     "        data[col] = pd.to_numeric(data[col], errors='coerce')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 81,
    "id": "ca58462e-c791-47d5-97e6-6fecea62757c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Season    float64\n",
+       "Season     object\n",
        "Age         int64\n",
        "G           int64\n",
        "GS          int64\n",
@@ -1394,7 +1394,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 82,
    "id": "bbf1aedb-252a-4916-99c6-a4f12489ad45",
    "metadata": {},
    "outputs": [],
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 83,
    "id": "55ada447-65fd-4c9d-bca1-0d4365006ebd",
    "metadata": {},
    "outputs": [
@@ -1466,7 +1466,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2015-16</td>\n",
        "      <td>20</td>\n",
        "      <td>80</td>\n",
        "      <td>55</td>\n",
@@ -1490,7 +1490,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2016-17</td>\n",
        "      <td>21</td>\n",
        "      <td>73</td>\n",
        "      <td>59</td>\n",
@@ -1514,7 +1514,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2017-18</td>\n",
        "      <td>22</td>\n",
        "      <td>75</td>\n",
        "      <td>73</td>\n",
@@ -1538,7 +1538,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2018-19</td>\n",
        "      <td>23</td>\n",
        "      <td>80</td>\n",
        "      <td>80</td>\n",
@@ -1562,7 +1562,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2019-20</td>\n",
        "      <td>24</td>\n",
        "      <td>73</td>\n",
        "      <td>73</td>\n",
@@ -1586,7 +1586,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2020-21</td>\n",
        "      <td>25</td>\n",
        "      <td>72</td>\n",
        "      <td>72</td>\n",
@@ -1610,7 +1610,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2021-22</td>\n",
        "      <td>26</td>\n",
        "      <td>74</td>\n",
        "      <td>74</td>\n",
@@ -1634,7 +1634,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2022-23</td>\n",
        "      <td>27</td>\n",
        "      <td>69</td>\n",
        "      <td>69</td>\n",
@@ -1658,7 +1658,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2023-24</td>\n",
        "      <td>28</td>\n",
        "      <td>79</td>\n",
        "      <td>79</td>\n",
@@ -1682,7 +1682,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2024-25</td>\n",
        "      <td>29</td>\n",
        "      <td>70</td>\n",
        "      <td>70</td>\n",
@@ -1710,17 +1710,17 @@
        "</div>"
       ],
       "text/plain": [
-       "    Season  Age   G  GS    MP    FG   FGA    FG%   3P  3PA  ...   DRB   TRB  \\\n",
-       "1      NaN   20  80  55  21.7   3.8   7.5  0.512  0.4  1.1  ...   4.7   7.0   \n",
-       "2      NaN   21  73  59  27.9   6.8  11.7  0.578  0.6  1.9  ...   6.9   9.8   \n",
-       "3      NaN   22  75  73  32.6   6.7  13.5  0.499  1.5  3.7  ...   8.1  10.7   \n",
-       "4      NaN   23  80  80  31.3   7.7  15.1  0.511  1.0  3.4  ...   8.0  10.8   \n",
-       "5      NaN   24  73  73  32.0   7.7  14.7  0.528  1.1  3.5  ...   7.5   9.7   \n",
-       "6      NaN   25  72  72  34.6  10.2  18.0  0.566  1.3  3.3  ...   8.0  10.8   \n",
-       "7      NaN   26  74  74  33.5  10.3  17.7  0.583  1.3  3.9  ...  11.0  13.8   \n",
-       "8      NaN   27  69  69  33.7   9.4  14.8  0.632  0.8  2.2  ...   9.4  11.8   \n",
-       "9      NaN   28  79  79  34.6  10.4  17.9  0.583  1.1  2.9  ...   9.5  12.4   \n",
-       "10     NaN   29  70  70  36.7  11.2  19.5  0.576  2.0  4.7  ...   9.9  12.7   \n",
+       "     Season  Age   G  GS    MP    FG   FGA    FG%   3P  3PA  ...   DRB   TRB  \\\n",
+       "1   2015-16   20  80  55  21.7   3.8   7.5  0.512  0.4  1.1  ...   4.7   7.0   \n",
+       "2   2016-17   21  73  59  27.9   6.8  11.7  0.578  0.6  1.9  ...   6.9   9.8   \n",
+       "3   2017-18   22  75  73  32.6   6.7  13.5  0.499  1.5  3.7  ...   8.1  10.7   \n",
+       "4   2018-19   23  80  80  31.3   7.7  15.1  0.511  1.0  3.4  ...   8.0  10.8   \n",
+       "5   2019-20   24  73  73  32.0   7.7  14.7  0.528  1.1  3.5  ...   7.5   9.7   \n",
+       "6   2020-21   25  72  72  34.6  10.2  18.0  0.566  1.3  3.3  ...   8.0  10.8   \n",
+       "7   2021-22   26  74  74  33.5  10.3  17.7  0.583  1.3  3.9  ...  11.0  13.8   \n",
+       "8   2022-23   27  69  69  33.7   9.4  14.8  0.632  0.8  2.2  ...   9.4  11.8   \n",
+       "9   2023-24   28  79  79  34.6  10.4  17.9  0.583  1.1  2.9  ...   9.5  12.4   \n",
+       "10  2024-25   29  70  70  36.7  11.2  19.5  0.576  2.0  4.7  ...   9.9  12.7   \n",
        "\n",
        "     AST  STL  BLK  TOV   PF   PTS              Awards  Has award  \n",
        "1    2.4  1.0  0.6  1.3  2.6  10.0               ROY-3          1  \n",
@@ -1737,7 +1737,7 @@
        "[10 rows x 29 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
