--- a/jokic.ipynb
+++ b/jokic.ipynb
@@ -1748,11 +1748,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "17ea897e-c809-42a8-b281-b775ea4e6ae2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "520b7fa6-ab9e-4a0f-8219-eb01f9dd8a43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(data['Season'], data['PTS'], label='Points Per Game')\n",
+    "\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.title('Nikola Jokic Scoring, R')"
+   ]
   }
  ],
  "metadata": {
