--- a/jokic.ipynb
+++ b/jokic.ipynb
@@ -539,6 +539,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b209eb2b-554d-4fa6-840d-1cac59912180",
+   "metadata": {},
+   "source": [
+    "Loaded the data and took a look at the data to get a feel of what it has. Also saw the shape of the data of how many rows and columns it had. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 73,
    "id": "f1325f9c-b1e7-413d-ba08-ca4feab8bc9a",
@@ -883,6 +891,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "84f440f8-a9b4-45e9-bb3a-b8e082b46db5",
+   "metadata": {},
+   "source": [
+    "Index 0 and 11 had not valuable insight so I decided to drop those two columns."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
    "id": "bf449c26-0538-423e-a51e-fa1380b1fdbb",
@@ -948,6 +964,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea392f7c-d46f-40c7-8952-ea912e81c57e",
+   "metadata": {},
+   "source": [
+    "I wanted to see if there were any null values and the data types the data had. I thought to drop columns that had redundant rows. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 77,
    "id": "af6511ec-c252-46fa-b447-bc34af7ee7f5",
@@ -1007,6 +1031,14 @@
    ],
    "source": [
     "data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57080477-339d-42dc-84c9-d9be281af499",
+   "metadata": {},
+   "source": [
+    "I wanted to fill in the rows that were empty and it was the awards columns. It would made sense base on the information on the data that Jokic did no win an award so it was the rows to be empty. So I filled the rows as \"No awards\"."
    ]
   },
   {
@@ -1404,6 +1436,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "799c2427-6301-4aef-9bee-815517cc16d1",
+   "metadata": {},
+   "source": [
+    "I wanted to change the columns that were suppose to be numeric data type to numeric. To do that I iterated through the coulmns, for those that are not awards or season, change it to numeric data type. I did this so I would not have to change the columns one by one. I had loop do it. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 82,
    "id": "bbf1aedb-252a-4916-99c6-a4f12489ad45",
@@ -1747,6 +1787,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "02dd6e08-2d1c-41e9-ba44-149cdc058396",
+   "metadata": {},
+   "source": [
+    "I wanted to change to the awards to 0 for when Jokic did not win award and 1 when Jokic did win award. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 85,
    "id": "17ea897e-c809-42a8-b281-b775ea4e6ae2",
@@ -1795,6 +1843,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "89270770-569f-4fd2-b49f-c52c95cff696",
+   "metadata": {},
+   "source": [
+    "I used a linear graph to see how Jokic did over the season with points, assist, and rebounds. Show casing that he had impoved over the seasons. He had improved over the season and show case his importance. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 92,
    "id": "40bde65b-f498-4695-8a3a-37299bd70cf2",
@@ -1817,6 +1873,14 @@
     "plt.ylabel('Points Per Game')\n",
     "plt.title('Efficiency vs Playing Time (Awards also Highlighted)')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f4c181d-88c7-4e08-9f1f-28f2a9acee0b",
+   "metadata": {},
+   "source": [
+    "I useda scatter plot to see if times per minute he played if he was effiencey and for those times that he played longer did he recieved an award. In this plot you could see that the more he had plyed he was efficent and he did recived awards. "
    ]
   },
   {
@@ -1855,12 +1919,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90d7acd5-0638-43f8-8be2-5b98954f36cf",
+   "cell_type": "markdown",
+   "id": "fe97f060-c43c-4716-9bea-df93bf597c90",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "I wanted to show a bar graph over points over the season. Also show cased awards if he received any. Based on the graph his points increased and for those increase he had MVP awards or was considered. "
+   ]
   }
  ],
  "metadata": {
